update swagger notation
