# docs/swagger.json
@@ -20,7 +20,7 @@
                 "summary": "List Users",
                 "responses": {
                     "200": {
-                        "description": "desc",
+                        "description": "OK",
                         "schema": {
                             "allOf": [
                                 {
@@ -39,11 +39,20 @@
                                 }
                             ]
                         }
+                    },
+                    "default": {
+                        "description": "400 \u0026 500 status, error field can be string or object",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.ErrorResponse"
+                        }
                     }
                 }
             },
             "post": {
                 "description": "Create New User",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -51,11 +60,28 @@
                     "Users"
                 ],
                 "summary": "Create User",
+                "parameters": [
+                    {
+                        "description": "please exclude non-required fields before firing the request",
+                        "name": "User",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user.User"
+                        }
+                    }
+                ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/httputil.Response"
+                        }
+                    },
+                    "default": {
+                        "description": "400 \u0026 500 status, error field can be string or object",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.ErrorResponse"
                         }
                     }
                 }
@@ -63,18 +89,18 @@
         },
         "/users/{userId}": {
             "get": {
-                "description": "Returning an user with given id",
+                "description": "Returning an user object with given id",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "Users"
                 ],
-                "summary": "Users by Id",
+                "summary": "User by id",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "User Id",
+                        "description": "user_id",
                         "name": "userId",
                         "in": "path",
                         "required": true
@@ -82,7 +108,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "desc",
+                        "description": "OK",
                         "schema": {
                             "allOf": [
                                 {
@@ -98,12 +124,30 @@
                                 }
                             ]
                         }
+                    },
+                    "default": {
+                        "description": "400 \u0026 500 status, error field can be string or object",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.ErrorResponse"
+                        }
                     }
                 }
             }
         }
     },
     "definitions": {
+        "httputil.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "error": {},
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
         "httputil.Response": {
             "type": "object",
             "properties": {
